fixed scroll bar and cutoff issue

--- a/frontend/src/components/HomePage/SplashPage.css
+++ b/frontend/src/components/HomePage/SplashPage.css
@@ -1,8 +1,8 @@
 .splash-page {
   background-image: url("https://blog.insidetracker.com/hs-fs/hubfs/healthy%20beans%20lentils%20legumes.jpg?width=840&name=healthy%20beans%20lentils%20legumes.jpg");
   background-size: cover;
-  height: 100vh;
-  width: 100vw;
+  height: auto;
+  width: auto;
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
@@ -14,5 +14,4 @@
   background-color: #e7e5e5c1;
   padding: 20px;
   width: auto;
-  box-sizing: border-box
 }
